[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kelvin-renn <kelvin.nguyen@rennlabs.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.8.2"
motor = "^3.5.1"
httpx = "^0.27.0"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
